[package]
name = "tp-save-converter"
version = "0.1.0"
authors = ["Lois L. <snowin71@outlook.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
thiserror = "1.0.31"